--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-asset-image": "^1.0.0",
     "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "^4.0.0",
+    "hexo-footnotes": "^1.0.2",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-feed": "^3.0.0",
@@ -29,9 +30,9 @@
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
+    "hexo-theme-next": "^8.22.0",
     "hexo-theme-vivia": "^0.5.0",
     "hexo-theme-yun": "^1.10.11",
-    "hexo-toc": "^1.1.0",
     "valine": "^1.5.3"
   }
 }
